[home][s]- temporary fix for navbar overlap

--- a/site/.vuepress/theme/styles/index.styl
+++ b/site/.vuepress/theme/styles/index.styl
@@ -5,3 +5,5 @@
 .navbar
   .site-name
     display none
+.dropdown-wrapper .dropdown-title
+  pointer-events none
